--- a/index.html
+++ b/index.html
@@ -1,14 +1,209 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Majeeo Nuts</title>
-  <link href="dist/output.css" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Majeeo Nuts - Premium Dry Fruits Online</title>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-white text-gray-800">
-  <div class="text-center mt-10">
-    <h1 class="text-4xl font-bold">Welcome to Majeeo Nuts 🥜</h1>
-    <p class="mt-4">Delicious dry fruits at your doorstep</p>
-  </div>
+<body class="bg-gray-50 font-sans">
+
+  <header class="bg-green-700 text-white p-6 text-center">
+    <h1 class="text-3xl font-bold">Majeeo Nuts</h1>
+    <p class="mt-2 text-lg">World-class Premium Dry Fruits - Fresh & Healthy</p>
+  </header>
+
+  <main class="max-w-7xl mx-auto p-6 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
+
+    <!-- Product Card Template -->
+    <article class="bg-white p-6 rounded-lg shadow-md flex flex-col">
+      <h2 class="text-xl font-semibold mb-3">Premium Almonds (Badam)</h2>
+      <img src="almonds.jpg" alt="Premium Almonds" class="h-48 w-full object-cover rounded mb-4" />
+      <p class="text-green-700 font-bold text-lg mb-2">₹1000/kg</p>
+      <p class="flex-grow text-gray-700 mb-4">High-quality California almonds, rich in antioxidants and healthy fats. Perfect for snacking and cooking.</p>
+      
+      <label for="almond-qty" class="block font-medium mb-1">Select Quantity:</label>
+      <select id="almond-qty" name="quantity" class="mb-4 p-2 border rounded">
+        <option value="250">250 g</option>
+        <option value="500">500 g</option>
+        <option value="1000" selected>1 kg</option>
+      </select>
+
+      <button class="bg-green-600 text-white py-2 rounded hover:bg-green-700 mb-4">Add to Cart</button>
+
+      <div>
+        <h3 class="font-semibold mb-2">Benefits:</h3>
+        <ul class="list-disc list-inside text-gray-600">
+          <li>Rich in healthy fats</li>
+          <li>Good for heart health</li>
+          <li>Boosts energy</li>
+        </ul>
+      </div>
+    </article>
+
+    <!-- Cashews -->
+    <article class="bg-white p-6 rounded-lg shadow-md flex flex-col">
+      <h2 class="text-xl font-semibold mb-3">Premium Cashews (Kaju)</h2>
+      <img src="cashews.jpg" alt="Premium Cashews" class="h-48 w-full object-cover rounded mb-4" />
+      <p class="text-green-700 font-bold text-lg mb-2">₹1200/kg</p>
+      <p class="flex-grow text-gray-700 mb-4">Fresh, creamy cashews packed with protein and essential minerals. Great for cooking and snacking.</p>
+
+      <label for="cashew-qty" class="block font-medium mb-1">Select Quantity:</label>
+      <select id="cashew-qty" name="quantity" class="mb-4 p-2 border rounded">
+        <option value="250">250 g</option>
+        <option value="500">500 g</option>
+        <option value="1000" selected>1 kg</option>
+      </select>
+
+      <button class="bg-green-600 text-white py-2 rounded hover:bg-green-700 mb-4">Add to Cart</button>
+
+      <div>
+        <h3 class="font-semibold mb-2">Benefits:</h3>
+        <ul class="list-disc list-inside text-gray-600">
+          <li>High in protein and healthy fats</li>
+          <li>Supports heart and bone health</li>
+          <li>Improves brain function</li>
+        </ul>
+      </div>
+    </article>
+
+    <!-- Dates -->
+    <article class="bg-white p-6 rounded-lg shadow-md flex flex-col">
+      <h2 class="text-xl font-semibold mb-3">Premium Dates (Khajoor)</h2>
+      <img src="dates.jpg" alt="Premium Dates" class="h-48 w-full object-cover rounded mb-4" />
+      <p class="text-green-700 font-bold text-lg mb-2">₹1300/kg</p>
+      <p class="flex-grow text-gray-700 mb-4">Naturally sweet and chewy dates, loaded with fiber and essential nutrients.</p>
+
+      <label for="dates-qty" class="block font-medium mb-1">Select Quantity:</label>
+      <select id="dates-qty" name="quantity" class="mb-4 p-2 border rounded">
+        <option value="250">250 g</option>
+        <option value="500">500 g</option>
+        <option value="1000" selected>1 kg</option>
+      </select>
+
+      <button class="bg-green-600 text-white py-2 rounded hover:bg-green-700 mb-4">Add to Cart</button>
+
+      <div>
+        <h3 class="font-semibold mb-2">Benefits:</h3>
+        <ul class="list-disc list-inside text-gray-600">
+          <li>Excellent energy booster</li>
+          <li>Good source of fiber and antioxidants</li>
+          <li>Supports digestion</li>
+        </ul>
+      </div>
+    </article>
+
+    <!-- Figs -->
+    <article class="bg-white p-6 rounded-lg shadow-md flex flex-col">
+      <h2 class="text-xl font-semibold mb-3">Premium Figs (Anjeer)</h2>
+      <img src="figs.jpg" alt="Premium Figs" class="h-48 w-full object-cover rounded mb-4" />
+      <p class="text-green-700 font-bold text-lg mb-2">₹1500/kg</p>
+      <p class="flex-grow text-gray-700 mb-4">Delicious dried figs, rich in calcium, fiber and natural sweetness.</p>
+
+      <label for="figs-qty" class="block font-medium mb-1">Select Quantity:</label>
+      <select id="figs-qty" name="quantity" class="mb-4 p-2 border rounded">
+        <option value="250">250 g</option>
+        <option value="500">500 g</option>
+        <option value="1000" selected>1 kg</option>
+      </select>
+
+      <button class="bg-green-600 text-white py-2 rounded hover:bg-green-700 mb-4">Add to Cart</button>
+
+      <div>
+        <h3 class="font-semibold mb-2">Benefits:</h3>
+        <ul class="list-disc list-inside text-gray-600">
+          <li>Rich source of calcium</li>
+          <li>Supports bone health</li>
+          <li>Great for digestion</li>
+        </ul>
+      </div>
+    </article>
+
+    <!-- Raisins -->
+    <article class="bg-white p-6 rounded-lg shadow-md flex flex-col">
+      <h2 class="text-xl font-semibold mb-3">Premium Raisins (Kishmish)</h2>
+      <img src="raisins.jpg" alt="Premium Raisins" class="h-48 w-full object-cover rounded mb-4" />
+      <p class="text-green-700 font-bold text-lg mb-2">₹1400/kg</p>
+      <p class="flex-grow text-gray-700 mb-4">Sweet and juicy raisins packed with vitamins and antioxidants.</p>
+
+      <label for="raisins-qty" class="block font-medium mb-1">Select Quantity:</label>
+      <select id="raisins-qty" name="quantity" class="mb-4 p-2 border rounded">
+        <option value="250">250 g</option>
+        <option value="500">500 g</option>
+        <option value="1000" selected>1 kg</option>
+      </select>
+
+      <button class="bg-green-600 text-white py-2 rounded hover:bg-green-700 mb-4">Add to Cart</button>
+
+      <div>
+        <h3 class="font-semibold mb-2">Benefits:</h3>
+        <ul class="list-disc list-inside text-gray-600">
+          <li>Boosts iron levels</li>
+          <li>Good for skin health</li>
+          <li>Natural energy booster</li>
+        </ul>
+      </div>
+    </article>
+
+    <!-- Walnuts -->
+    <article class="bg-white p-6 rounded-lg shadow-md flex flex-col">
+      <h2 class="text-xl font-semibold mb-3">Premium Walnuts (Akhrot)</h2>
+      <img src="walnuts.jpg" alt="Premium Walnuts" class="h-48 w-full object-cover rounded mb-4" />
+      <p class="text-green-700 font-bold text-lg mb-2">₹1400/kg</p>
+      <p class="flex-grow text-gray-700 mb-4">Crunchy walnuts rich in omega-3 fatty acids for brain and heart health.</p>
+
+      <label for="walnuts-qty" class="block font-medium mb-1">Select Quantity:</label>
+      <select id="walnuts-qty" name="quantity" class="mb-4 p-2 border rounded">
+        <option value="250">250 g</option>
+        <option value="500">500 g</option>
+        <option value="1000" selected>1 kg</option>
+      </select>
+
+      <button class="bg-green-600 text-white py-2 rounded hover:bg-green-700 mb-4">Add to Cart</button>
+
+      <div>
+        <h3 class="font-semibold mb-2">Benefits:</h3>
+        <ul class="list-disc list-inside text-gray-600">
+          <li>Supports brain health</li>
+          <li>Rich in antioxidants</li>
+          <li>Improves heart function</li>
+        </ul>
+      </div>
+    </article>
+
+    <!-- Pistachios -->
+    <article class="bg-white p-6 rounded-lg shadow-md flex flex-col">
+      <h2 class="text-xl font-semibold mb-3">Premium Pistachios (Pista)</h2>
+      <img src="pistachios.jpg" alt="Premium Pistachios" class="h-48 w-full object-cover rounded mb-4" />
+      <p class="text-green-700 font-bold text-lg mb-2">₹1400/kg</p>
+      <p class="flex-grow text-gray-700 mb-4">Flavorful and crunchy pistachios loaded with protein and fiber.</p>
+
+      <label for="pistachios-qty" class="block font-medium mb-1">Select Quantity:</label>
+      <select id="pistachios-qty" name="quantity" class="mb-4 p-2 border rounded">
+        <option value="250">250 g</option>
+        <option value="500">500 g</option>
+        <option value="1000" selected>1 kg</option>
+      </select>
+
+      <button class="bg-green-600 text-white py-2 rounded hover:bg-green-700 mb-4">Add to Cart</button>
+
+      <div>
+        <h3 class="font-semibold mb-2">Benefits:</h3>
+        <ul class="list-disc list-inside text-gray-600">
+          <li>High in protein and fiber</li>
+          <li>Supports digestion</li>
+          <li>Good for weight management</li>
+        </ul>
+      </div>
+    </article>
+
+  </main>
+
+  <footer class="bg-green-700 text-white text-center p-4 mt-10">
+    <p>© 2025 Majeeo Nuts. All rights reserved.</p>
+  </footer>
+
 </body>
 </html>
+
+
