--- a/index.html
+++ b/index.html
@@ -1,132 +1,161 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Majeeo Nuts - Premium Dry Fruits Online</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>MajeeoNuts - Premium Dry Fruits</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+  <style>
+    body { font-family: 'Poppins', sans-serif; }
+  </style>
+</head>
+<body class="bg-yellow-50 text-gray-900">
+
+  <header class="bg-green-800 text-white py-6 text-center shadow-md">
+    <h1 class="text-4xl font-bold">MajeeoNuts</h1>
+    <p class="mt-1 text-lg">World-class Premium Dry Fruits - Fresh & Healthy</p>
+  </header>
+
+  <div class="max-w-7xl mx-auto p-6 grid grid-cols-1 lg:grid-cols-4 gap-6">
+
+    <!-- Products -->
+    <main class="lg:col-span-3 grid grid-cols-1 sm:grid-cols-2 gap-6">
+      <article class="bg-white rounded-xl shadow-md p-6">
+        <h2 class="text-xl font-semibold mb-2">Premium Almonds (Badam)</h2>
+        <img src="https://images.unsplash.com/photo-1588007985362-578c7c1a80b3?auto=format&fit=crop&w=600&q=80" class="w-full h-48 object-cover rounded mb-4" alt="Almonds">
+        <p class="text-green-700 font-bold mb-2">₹1000/kg</p>
+        <p class="text-sm text-gray-700 mb-4">High-quality California almonds, rich in antioxidants and healthy fats.</p>
+        <select class="p-2 border rounded mb-4 quantity-select">
+          <option value="250">250g</option>
+          <option value="500">500g</option>
+          <option value="1000" selected>1kg</option>
+        </select>
+        <button class="add-to-cart w-full bg-green-600 text-white py-2 rounded" data-name="Almonds" data-price-per-kg="1000">Add to Cart</button>
+      </article>
+
+      <article class="bg-white rounded-xl shadow-md p-6">
+        <h2 class="text-xl font-semibold mb-2">Premium Cashews (Kaju)</h2>
+        <img src="https://images.unsplash.com/photo-1601004890684-d8cbf643f5f2?auto=format&fit=crop&w=600&q=80" class="w-full h-48 object-cover rounded mb-4" alt="Cashews">
+        <p class="text-green-700 font-bold mb-2">₹1200/kg</p>
+        <p class="text-sm text-gray-700 mb-4">Fresh, creamy cashews packed with protein and essential minerals.</p>
+        <select class="p-2 border rounded mb-4 quantity-select">
+          <option value="250">250g</option>
+          <option value="500">500g</option>
+          <option value="1000" selected>1kg</option>
+        </select>
+        <button class="add-to-cart w-full bg-green-600 text-white py-2 rounded" data-name="Cashews" data-price-per-kg="1200">Add to Cart</button>
+      </article>
+    </main>
+
+    <!-- Cart & Info -->
+    <aside class="bg-white rounded-xl shadow-md p-6 h-max sticky top-4">
+      <h2 class="text-2xl font-bold mb-4">Your Cart</h2>
+      <div id="cart-items" class="space-y-4 text-sm">
+        <p class="text-gray-500">Your cart is empty.</p>
+      </div>
+      <button id="checkout-btn" class="mt-4 w-full bg-green-700 text-white py-2 rounded" disabled>Checkout</button>
+
+      <hr class="my-6">
+
+      <div>
+        <h3 class="text-lg font-semibold mb-2">Home</h3>
+        <p class="text-sm text-gray-600">Welcome to MajeeoNuts! We deliver premium dry fruits directly from our in-house facility to your doorstep.</p>
+      </div>
+
+      <div class="mt-4">
+        <h3 class="text-lg font-semibold mb-2">About Us</h3>
+        <p class="text-sm text-gray-600">MajeeoNuts ensures purity, taste, and nutrition. With our top-quality dry fruits, we help you lead a healthy life.</p>
+      </div>
+
+      <div class="mt-4">
+        <h3 class="text-lg font-semibold mb-2">Contact Us</h3>
+        <p class="text-sm">Email: <a href="mailto:maheshgawade7799@gmail.com" class="text-green-700">maheshgawade7799@gmail.com</a></p>
+        <p class="text-sm">Phone: +91 9876543210</p>
+        <p class="text-sm">Mumbai, India</p>
+      </div>
+    </aside>
+
+  </div>
+
+  <footer class="text-center text-white bg-green-800 py-4 mt-10">
+    © 2025 MajeeoNuts. All rights reserved.
+  </footer>
+
+  <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
   <script>
     const cart = [];
+    const cartItemsDiv = document.getElementById("cart-items");
+    const checkoutBtn = document.getElementById("checkout-btn");
 
-    function getPrice(product, weight) {
-      const pricePerKg = {
-        almond: 1200,
-        cashew: 1000
-      }[product];
-
-      return (pricePerKg * weight) / 1000;
-    }
-
-    function addToCart(product, name) {
-      const select = document.getElementById(`${product}-qty`);
-      const weight = parseInt(select.value);
-      const price = getPrice(product, weight);
-
-      const existing = cart.find(item => item.product === product && item.weight === weight);
-
-      if (existing) {
-        existing.qty++;
-      } else {
-        cart.push({ product, name, weight, qty: 1, price });
+    function renderCart() {
+      cartItemsDiv.innerHTML = "";
+      if (cart.length === 0) {
+        cartItemsDiv.innerHTML = '<p class="text-gray-500">Your cart is empty.</p>';
+        checkoutBtn.disabled = true;
+        return;
       }
 
-      renderCart();
+      checkoutBtn.disabled = false;
+      cart.forEach((item, index) => {
+        const itemDiv = document.createElement("div");
+        itemDiv.className = "border p-3 rounded flex justify-between items-start";
+        itemDiv.innerHTML = `
+          <div>
+            <p class="font-semibold">${item.name}</p>
+            <p>${item.grams}g for ₹${item.price.toFixed(2)}</p>
+          </div>
+          <button class="text-red-600" onclick="removeItem(${index})">Remove</button>
+        `;
+        cartItemsDiv.appendChild(itemDiv);
+      });
     }
 
-    function removeFromCart(index) {
+    function removeItem(index) {
       cart.splice(index, 1);
       renderCart();
     }
 
-    function renderCart() {
-      const cartDiv = document.getElementById("cart");
-      cartDiv.innerHTML = "";
+    document.querySelectorAll(".add-to-cart").forEach(button => {
+      button.addEventListener("click", () => {
+        const name = button.dataset.name;
+        const pricePerKg = parseInt(button.dataset.pricePerKg);
+        const grams = parseInt(button.parentElement.querySelector(".quantity-select").value);
+        const price = (pricePerKg / 1000) * grams;
 
-      if (cart.length === 0) {
-        cartDiv.innerHTML = '<p class="text-gray-600">Cart is empty</p>';
-        return;
-      }
-
-      let total = 0;
-      cart.forEach((item, index) => {
-        const subtotal = item.price * item.qty;
-        total += subtotal;
-        cartDiv.innerHTML += `
-          <div class="mb-2 border-b pb-2">
-            <div><strong>${item.name}</strong> - ${item.weight}g x ${item.qty}</div>
-            <div class="text-sm">Subtotal: ₹${subtotal}</div>
-            <button onclick="removeFromCart(${index})" class="text-red-500 text-sm">Remove</button>
-          </div>
-        `;
+        cart.push({ name, grams, price });
+        renderCart();
       });
+    });
 
-      cartDiv.innerHTML += `<div class="mt-2 font-bold">Total: ₹${total}</div>`;
-    }
+    checkoutBtn.addEventListener("click", () => {
+      const total = cart.reduce((sum, item) => sum + item.price, 0);
+      const options = {
+        key: "rzp_live_LIqOpioBHDIhG4",
+        amount: Math.round(total * 100),
+        currency: "INR",
+        name: "MajeeoNuts",
+        description: "Premium Dry Fruits Purchase",
+        handler: function (response) {
+          alert("Payment successful! Payment ID: " + response.razorpay_payment_id);
+          cart.length = 0;
+          renderCart();
+        },
+        prefill: {
+          email: "maheshgawade7799@gmail.com"
+        },
+        theme: {
+          color: "#047857"
+        }
+      };
+      const rzp = new Razorpay(options);
+      rzp.open();
+    });
+
+    renderCart();
   </script>
-</head>
-<body class="bg-gray-100 font-sans">
-  <header class="bg-green-700 text-white p-6 flex justify-between items-center">
-    <div>
-      <h1 class="text-3xl font-bold">Majeeo Nuts</h1>
-      <p class="text-sm">Premium Dry Fruits</p>
-    </div>
-    <div>
-      <h2 class="text-xl font-semibold">Cart</h2>
-      <div id="cart" class="bg-white p-4 rounded shadow max-w-xs"></div>
-    </div>
-  </header>
 
-  <nav class="bg-white shadow p-4">
-    <ul class="flex space-x-4">
-      <li><a href="#home" class="text-green-700 font-semibold">Home</a></li>
-      <li><a href="#about" class="text-green-700 font-semibold">About Us</a></li>
-      <li><a href="#contact" class="text-green-700 font-semibold">Contact Us</a></li>
-    </ul>
-  </nav>
-
-  <main class="p-6 grid grid-cols-1 sm:grid-cols-2 gap-6">
-    <!-- Almonds -->
-    <div class="bg-white p-4 rounded shadow">
-      <h3 class="text-xl font-bold">Premium Almonds</h3>
-      <img src="almonds.jpg" alt="Almonds" class="w-full h-48 object-cover rounded mt-2">
-      <select id="almond-qty" class="mt-2 p-2 border rounded">
-        <option value="250">250g</option>
-        <option value="500">500g</option>
-        <option value="1000">1kg</option>
-      </select>
-      <button onclick="addToCart('almond', 'Almonds')" class="bg-green-600 text-white px-4 py-2 mt-2 rounded">Add to Cart</button>
-    </div>
-
-    <!-- Cashews -->
-    <div class="bg-white p-4 rounded shadow">
-      <h3 class="text-xl font-bold">Premium Cashews</h3>
-      <img src="cashews.jpg" alt="Cashews" class="w-full h-48 object-cover rounded mt-2">
-      <select id="cashew-qty" class="mt-2 p-2 border rounded">
-        <option value="250">250g</option>
-        <option value="500">500g</option>
-        <option value="1000">1kg</option>
-      </select>
-      <button onclick="addToCart('cashew', 'Cashews')" class="bg-green-600 text-white px-4 py-2 mt-2 rounded">Add to Cart</button>
-    </div>
-  </main>
-
-  <section id="home" class="p-6">
-    <h2 class="text-2xl font-bold mb-2">Home</h2>
-    <p>Welcome to Majeeo Nuts – where health meets quality. Explore our collection of premium dry fruits carefully sourced and packed at our in-house facility in Mumbai.</p>
-  </section>
-
-  <section id="about" class="p-6">
-    <h2 class="text-2xl font-bold mb-2">About Us</h2>
-    <p>We are committed to delivering high-quality dry fruits for every household. Our state-of-the-art manufacturing ensures hygiene, freshness, and superior taste. MajeeoNuts stands for purity and taste for all ages – kids to elders.</p>
-  </section>
-
-  <section id="contact" class="p-6">
-    <h2 class="text-2xl font-bold mb-2">Contact Us</h2>
-    <p>Email us at <a href="mailto:maheshgawade7799@gmail.com" class="text-green-700">maheshgawade7799@gmail.com</a> or reach out on our Instagram page @MajeeoNutsIndia.</p>
-  </section>
-
-  <footer class="bg-green-700 text-white text-center p-4">
-    <p>© 2025 Majeeo Nuts. All rights reserved.</p>
-  </footer>
 </body>
 </html>
