Update product images with local webp and avif files

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <main class="lg:col-span-3 grid grid-cols-1 sm:grid-cols-2 gap-6">
       <article class="bg-white rounded-xl shadow-md p-6">
         <h2 class="text-xl font-semibold mb-2">Premium Almonds (Badam)</h2>
-        <img src="https://images.unsplash.com/photo-1588007985362-578c7c1a80b3?auto=format&fit=crop&w=600&q=80" class="w-full h-48 object-cover rounded mb-4" alt="Almonds">
+        <img src="images/almonds.webp" alt="Premium Almonds" class="h-48 w-full object-cover rounded mb-4" />
         <p class="text-green-700 font-bold mb-2">₹1000/kg</p>
         <p class="text-sm text-gray-700 mb-4">High-quality California almonds, rich in antioxidants and healthy fats.</p>
         <select class="p-2 border rounded mb-4 quantity-select">
@@ -38,7 +38,7 @@
 
       <article class="bg-white rounded-xl shadow-md p-6">
         <h2 class="text-xl font-semibold mb-2">Premium Cashews (Kaju)</h2>
-        <img src="https://images.unsplash.com/photo-1601004890684-d8cbf643f5f2?auto=format&fit=crop&w=600&q=80" class="w-full h-48 object-cover rounded mb-4" alt="Cashews">
+        <img src="images/cashews.avif" alt="Premium Cashews" class="h-48 w-full object-cover rounded mb-4" />
         <p class="text-green-700 font-bold mb-2">₹1200/kg</p>
         <p class="text-sm text-gray-700 mb-4">Fresh, creamy cashews packed with protein and essential minerals.</p>
         <select class="p-2 border rounded mb-4 quantity-select">
