✨ Added home.html, about.html, contact.html with full UI, slider, and footer updates for MajeeoNuts

--- a/CSS/css/about.html
+++ b/CSS/css/about.html
@@ -1,30 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>About Us - MajeeoNuts</title>
+  <meta charset="UTF-8">
+  <title>About MajeeoNuts</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-yellow-50 font-sans">
+<body class="bg-yellow-50 text-gray-900">
 
-  <header class="bg-green-800 text-white p-4 flex justify-between items-center">
-    <h1 class="text-2xl font-bold">MajeeoNuts</h1>
-    <nav class="space-x-4">
-      <a href="home.html" class="hover:underline">Home</a>
-      <a href="about.html" class="hover:underline">About Us</a>
-      <a href="contact.html" class="hover:underline">Contact Us</a>
-    </nav>
+  <header class="bg-green-800 text-white py-6 text-center shadow-md">
+    <h1 class="text-4xl font-bold">About Us</h1>
   </header>
 
-  <main class="p-6">
-    <h2 class="text-3xl font-bold mb-4">About Us</h2>
-    <p class="text-gray-700 max-w-2xl">
-      MajeeoNuts ensures purity, taste, and nutrition. With our top-quality dry fruits, we help you lead a healthy life.
-      Every product is sourced directly, quality-checked in-house, and delivered fresh. We are committed to building a community
-      focused on health, fitness, and wellness.
-    </p>
+  <main class="max-w-3xl mx-auto p-6 text-center">
+    <p class="text-lg">MajeeoNuts brings you world-class dry fruits carefully selected for quality, taste, and purity. Our mission is to help you eat healthy with the goodness of nature.</p>
   </main>
 
+  <!-- Same Footer as above -->
+  <!-- Copy the same <footer> from home.html -->
 </body>
 </html>
