--- a/CSS/css/contact.html
+++ b/CSS/css/contact.html
@@ -1,28 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
   <title>Contact Us - MajeeoNuts</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-yellow-50 font-sans">
+<body class="bg-yellow-50 text-gray-900">
 
-  <header class="bg-green-800 text-white p-4 flex justify-between items-center">
-    <h1 class="text-2xl font-bold">MajeeoNuts</h1>
-    <nav class="space-x-4">
-      <a href="home.html" class="hover:underline">Home</a>
-      <a href="about.html" class="hover:underline">About Us</a>
-      <a href="contact.html" class="hover:underline">Contact Us</a>
-    </nav>
+  <header class="bg-green-800 text-white py-6 text-center shadow-md">
+    <h1 class="text-4xl font-bold">Contact Us</h1>
   </header>
 
-  <main class="p-6">
-    <h2 class="text-3xl font-bold mb-4">Contact Us</h2>
-    <p>Email: <a href="mailto:maheshgawade7799@gmail.com" class="text-green-700 underline">maheshgawade7799@gmail.com</a></p>
-    <p>Phone: +91 9876543210</p>
-    <p>Location: Mumbai, India</p>
+  <main class="max-w-2xl mx-auto p-6">
+    <form class="space-y-4 bg-white p-6 rounded shadow">
+      <div>
+        <label class="block text-sm font-semibold">Name</label>
+        <input type="text" class="w-full border p-2 rounded" placeholder="Your Name" required>
+      </div>
+      <div>
+        <label class="block text-sm font-semibold">Email</label>
+        <input type="email" class="w-full border p-2 rounded" placeholder="you@example.com" required>
+      </div>
+      <div>
+        <label class="block text-sm font-semibold">Message</label>
+        <textarea class="w-full border p-2 rounded" placeholder="Your message here..." rows="4" required></textarea>
+      </div>
+      <button type="submit" class="bg-green-700 text-white py-2 px-4 rounded hover:bg-green-800">Send</button>
+    </form>
   </main>
 
+  <!-- Same Footer as above -->
 </body>
 </html>
