--- a/index.html
+++ b/index.html
@@ -1,47 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>MajeeoNuts - Premium Dry Fruits</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
     body { font-family: 'Poppins', sans-serif; }
+    .animate-fade-in {
+      animation: fadeIn 1.5s ease-in-out;
+    }
+    @keyframes fadeIn {
+      0% { opacity: 0; }
+      100% { opacity: 1; }
+    }
   </style>
 </head>
 <body class="bg-yellow-50 text-gray-900">
 
-  <!-- Header with Navigation -->
-  <header class="bg-green-800 text-white py-6 px-4 shadow-md flex flex-col lg:flex-row justify-between items-center">
-    <div>
-      <h1 class="text-4xl font-bold">MajeeoNuts</h1>
-      <p class="text-lg">World-class Premium Dry Fruits - Fresh & Healthy</p>
-    </div>
-    <nav class="mt-4 lg:mt-0 space-x-4">
-      <a href="home.html" class="text-white hover:underline">Home</a>
-      <a href="about.html" class="text-white hover:underline">About Us</a>
-      <a href="contact.html" class="text-white hover:underline">Contact Us</a>
+  <!-- Header -->
+  <header class="bg-green-800 text-white py-4 px-6 flex items-center justify-between shadow-md">
+    <h1 class="text-2xl font-bold">MajeeoNuts</h1>
+    <nav class="space-x-6 text-sm">
+      <a href="home.html" class="hover:underline">Home</a>
+      <a href="about.html" class="hover:underline">About Us</a>
+      <a href="contact.html" class="hover:underline">Contact Us</a>
     </nav>
   </header>
 
-  <!-- Image Slider -->
-  <div class="max-w-7xl mx-auto mt-6">
-    <div class="relative overflow-hidden rounded-xl shadow-lg">
-      <div class="w-full h-64">
-        <img src="images/slide1.jpg" class="w-full h-full object-cover animate-fadeIn" alt="Slide 1">
-      </div>
-    </div>
-  </div>
+  <!-- Hero Image Slider -->
+  <section class="relative overflow-hidden max-w-7xl mx-auto mt-6 rounded-xl shadow-lg">
+    <img src="images/MajeeoNuts1.png" alt="MajeeoNuts Banner" class="w-full h-80 object-cover animate-fade-in">
+  </section>
 
-  <!-- Main Content -->
+  <!-- Main Section -->
   <div class="max-w-7xl mx-auto p-6 grid grid-cols-1 lg:grid-cols-4 gap-6">
 
     <!-- Products -->
     <main class="lg:col-span-3 grid grid-cols-1 sm:grid-cols-2 gap-6">
-      <!-- Almonds Card -->
+      <!-- Almonds -->
       <article class="bg-white rounded-xl shadow-md p-6">
         <h2 class="text-xl font-semibold mb-2">Premium Almonds (Badam)</h2>
         <img src="images/almonds.webp" alt="Premium Almonds" class="h-48 w-full object-cover rounded mb-4" />
@@ -55,7 +53,7 @@
         <button class="add-to-cart w-full bg-green-600 text-white py-2 rounded" data-name="Almonds" data-price-per-kg="1000">Add to Cart</button>
       </article>
 
-      <!-- Cashews Card -->
+      <!-- Cashews -->
       <article class="bg-white rounded-xl shadow-md p-6">
         <h2 class="text-xl font-semibold mb-2">Premium Cashews (Kaju)</h2>
         <img src="images/cashews.avif" alt="Premium Cashews" class="h-48 w-full object-cover rounded mb-4" />
@@ -81,35 +79,41 @@
   </div>
 
   <!-- Footer -->
-  <footer class="bg-green-900 text-white mt-10">
-    <div class="max-w-7xl mx-auto px-6 py-10 grid grid-cols-1 md:grid-cols-3 gap-6">
+  <footer class="bg-green-800 text-white py-10 px-6 mt-10 text-sm">
+    <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-8">
       <div>
-        <h3 class="font-bold text-lg mb-2">PREMIUM QUALITY</h3>
-        <p>100% Quality Guarantee</p>
-        <h3 class="font-bold text-lg mt-4 mb-2">SWIFT SHIPPING</h3>
-        <p>Delivering across India</p>
+        <h3 class="text-lg font-bold mb-2">Why MajeeoNuts?</h3>
+        <p>PREMIUM QUALITY – 100% Quality Guarantee</p>
+        <p>SWIFT SHIPPING – Delivering across India</p>
+        <p>EASY RETURN – Refer return policy</p>
+        <p>24/7 SUPPORT – Support every time</p>
       </div>
+
       <div>
-        <h3 class="font-bold text-lg mb-2">EASY RETURN</h3>
-        <p>Refer return policy</p>
-        <h3 class="font-bold text-lg mt-4 mb-2">24/7 SUPPORT</h3>
-        <p>Support every time</p>
+        <h3 class="text-lg font-bold mb-2">Quick Links</h3>
+        <ul class="space-y-1">
+          <li><a href="about.html" class="hover:underline">About Us</a></li>
+          <li><a href="contact.html" class="hover:underline">Contact Us</a></li>
+          <li><a href="#" class="hover:underline">Bulk Ordering</a></li>
+          <li><a href="#" class="hover:underline">Privacy Policy</a></li>
+          <li><a href="#" class="hover:underline">Return Policy</a></li>
+        </ul>
       </div>
+
       <div>
-        <h3 class="font-bold text-lg mb-2">Contact Details</h3>
+        <h3 class="text-lg font-bold mb-2">Contact Details</h3>
         <p>NR TOWERS, 17th Cross, Sector 4, 19th Main Rd, HSR Layout, Bengaluru - 560102</p>
-        <p>info@dryfruithouse.com</p>
-        <p>+91-7483600212</p>
+        <p>Email: info@dryfruithouse.com</p>
+        <p>Phone: +91-7483600212</p>
+        <div class="flex space-x-4 mt-2">
+          <a href="#" aria-label="Facebook">Facebook</a>
+          <a href="#" aria-label="Instagram">Instagram</a>
+          <a href="#" aria-label="LinkedIn">LinkedIn</a>
+        </div>
       </div>
     </div>
-    <div class="bg-green-800 py-4 text-center">
-      <p>&copy; 2025 Dry Fruit House. All Rights Reserved.</p>
-      <div class="flex justify-center mt-2 space-x-4">
-        <a href="#">Facebook</a>
-        <a href="#">Twitter</a>
-        <a href="#">Instagram</a>
-        <a href="#">LinkedIn</a>
-      </div>
+    <div class="text-center mt-6 border-t pt-4 border-green-600">
+      Copyright © 2025 Dry Fruit House. All Rights Reserved.
     </div>
   </footer>
 
@@ -186,6 +190,5 @@
 
     renderCart();
   </script>
-
 </body>
 </html>
